Fix viewport bug on mobile devices.

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -18,9 +18,6 @@ body {
 }
 
 .destination {
-  width: 40%;
-  max-width: 600px;
-  min-width: 500px;
   padding: 10px 10px 30px 10px;
   margin: 10px;
   border: 2px solid black;
@@ -48,6 +45,12 @@ footer {
 }
 
 @media only screen and (min-device-width: 481px) {
+  .destination {
+    width: 40%;
+    max-width: 600px;
+    min-width: 500px;
+  }
+
   .destination .time.blue {
     background-color: blue;
   }
@@ -66,6 +69,10 @@ footer {
 }
 
 @media only screen and (max-device-width: 480px) {
+  .destination {
+    width: 40%;
+  }
+
   .destination-name {
     color: white;
   }
